--- a/habit_tracker/static/stylesheet.css
+++ b/habit_tracker/static/stylesheet.css
@@ -2,17 +2,32 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	background-color: rgb(252, 246, 246);
-}
 
-.nav {
-	/* background-color: cadetblue; */
-	/* box-shadow: inset 15em 1em rgb(243, 234, 180); */
+	/* font-family: 'Muli', sans-serif; */
+	font-family: 'Raleway', sans-serif;
+}
+body {
+	/* background: linear-gradient(
+		90deg,
+		rgba(238, 209, 174, 0.542454481792717) 0%,
+		rgba(227, 45, 13, 0.4108018207282913) 100%
+	); */
+	background: linear-gradient(
+		90deg,
+		rgba(238, 209, 174, 0.04945728291316531) 0%,
+		rgba(233, 148, 179, 0.038252801120448154) 100%
+	);
+	/* background: linear-gradient(
+		90deg,
+		rgba(238, 209, 174, 0.542454481792717) 0%,
+		rgba(233, 148, 179, 0.5816701680672269) 100%
+	); */
+	/* background: linear-gradient(90deg, rgba(238, 209, 174, 1) 0%, rgba(233, 148, 179, 1) 100%); */
+	background-size: cover;
 }
 
 .habit {
 	width: 50%;
-	height: 30%;
 	border: 1px solid lightgrey;
 	padding: 5%;
 	border-radius: 15px;
@@ -24,9 +39,113 @@
 	align-content: center;
 	align-items: center;
 	flex-wrap: nowrap;
+	margin-bottom: 0.4%;
 }
-/* .habit a {
+.habit-journal {
+	width: 50%;
+	border: 1px solid lightgrey;
+	margin-top: 2%;
+	padding: 1%;
+	margin-bottom: 1%;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	background-color: rgb(236, 112, 112);
+	box-shadow: inset 0 0 10px #e7d0d0;
+	align-content: center;
+	align-items: center;
+	flex-wrap: nowrap;
+}
+.journal {
+	width: 50%;
+	border: 1px solid lightgrey;
+	padding: 5%;
+	border-radius: 15px;
+	background-color: rgb(236, 201, 201);
+	box-shadow: inset 0 0 10px #e7d0d0;
+	align-content: center;
+	align-items: justify;
+	flex-wrap: nowrap;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+.journal-form-flex {
+	align-content: center;
+	align-items: justify;
+	flex-wrap: nowrap;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+.journal p {
+	background-color: rgb(236, 201, 201);
+}
+#id_note {
+	width: 640px;
+	border: 1px solid lightgrey;
+	padding: 5%;
+	border-radius: 15px;
+	background-color: rgb(245, 239, 239);
+	box-shadow: inset 0 0 10px #e7d0d0;
+}
+#id_count {
+	width: 10%;
+	height: 10%;
+	border-radius: 5px;
+}
+/* .met_goal {
+	width: 50px;
+	height: 50px;
+	background-color: teal;
+	opacity: 0;
 } */
+.journal-form {
+	align-content: center;
+	align-items: justify;
+	flex-wrap: nowrap;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+label {
+	font-size: large;
+}
+.journal-details {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex-wrap: nowrap;
+}
+
+.habit:hover {
+	background-color: rgb(238, 222, 151);
+}
+
+/* unvisited link */
+a:link {
+	color: black;
+	background-color: transparent;
+}
+
+/* visited link */
+a:visited {
+	color: black;
+	background-color: transparent;
+}
+
+/* mouse over link */
+a:hover {
+	color: black;
+	background-color: transparent;
+}
+
+/* selected link */
+a:active {
+	color: black;
+	background-color: transparent;
+}
 
 .habits {
 	display: flex;
@@ -39,11 +158,52 @@
 .days {
 	display: flex;
 	flex-direction: row;
-
+	flex-wrap: wrap;
 	align-content: center;
 	align-items: center;
 	flex-wrap: nowrap;
+	padding-bottom: 20%;
+	margin-top: 5%;
+	justify-content: space-evenly;
 }
 .day {
-	width: 10%;
+	width: 100px;
+	height: 100px;
+	background-color: rgb(166, 223, 164);
+	border: 1px solid lightgrey;
+}
+.habit p {
+	background-color: transparent;
+}
+.habit p:hover {
+	background-color: transparent;
+}
+button {
+	width: 100px;
+	height: 40px;
+
+	font-size: large;
+	border-radius: 15px;
+	background: radial-gradient(circle, rgba(242, 251, 63, 1) 0%, rgba(191, 252, 70, 1) 100%);
+
+	box-shadow: inset 0 0 10px #e7d0d0;
+}
+button:hover {
+	background: radial-gradient(circle, rgba(242, 251, 63, 1) 0%, rgba(70, 252, 123, 1) 100%);
+}
+
+.nav {
+	padding: 1.5%;
+	margin-top: 2%;
+	background: rgb(236, 112, 112);
+	display: flex;
+}
+.login {
+	margin-left: auto;
+	/* display: flex;
+	flex-direction: row;
+	justify-content: flex-end; */
+}
+.btn-habit {
+	margin-top: 2%;
 }
